--- a/app/design/frontend/AutoPartsMarket/apm/Magento_Cms/layout/cms_index_index.xml
+++ b/app/design/frontend/AutoPartsMarket/apm/Magento_Cms/layout/cms_index_index.xml
@@ -7,15 +7,22 @@
     <body>
         <referenceContainer name="page.wrapper">
             <container name="full.screen.content" htmlTag="div" htmlId="full-screen-content" htmlClass="full-screen-content block-full" before="main.content">
-                <block name="attribute.search" template="Magento_Theme::search/attribute-search.phtml">
+                <block name="attribute.search" template="Apm_AttributeSearch::search/attribute-search.phtml">
                     <arguments>
                         <argument name="view_model" xsi:type="object">Apm\AttributeSearch\ViewModel\AttributeSearchViewModel</argument>
                     </arguments>
                 </block>
             </container>
             <referenceContainer name="main.content">
-                <container name="category.banner.section" htmlTag="section">
-                    <block name="category.banner.block" template="Magento_Theme::category/category-banner.phtml">
+                <container name="banner.carousel.section" htmlTag="section">
+                    <block name="banner.carousel.block" template="Magento_Theme::category/banner-carousel.phtml">
+                        <arguments>
+                            <argument name="view_model" xsi:type="object">Apm\Carousel\ViewModel\CarouselItemViewModel</argument>
+                        </arguments>
+                    </block>
+                </container>
+                <container name="suggestions.section" htmlTag="section">
+                    <block name="suggestions.block" template="Magento_Theme::info/suggestionCarousel.phtml">
                         <arguments>
                             <argument name="view_model" xsi:type="object">Apm\Catalog\ViewModel\CategoryGridBlockViewModel</argument>
                         </arguments>
