--- a/app/design/frontend/AutoPartsMarket/apm/Magento_Theme/web/css/source/_module_extend.less
+++ b/app/design/frontend/AutoPartsMarket/apm/Magento_Theme/web/css/source/_module_extend.less
@@ -30,9 +30,7 @@
                 position: relative;
                 background-position: center center;
                 background-size: cover;
-                background-image:
-                    //url("https://magento2demo.bzotech.com/bm_bzota/pub/static/version1684226714/frontend/BzoTech/autoparts/en_US/images/bg-search-attr-full.jpg")
-                    url("../images/patrik-storm-alstra-pictures-wVTPr2HDXUQ-unsplash.jpg");
+                background-image: url("../images/patrik-storm-alstra-pictures-wVTPr2HDXUQ-unsplash.jpg");
             }
 
             .container {
@@ -95,30 +93,214 @@
             }
         }
 
+        .section-block-title {
+            margin-bottom: 55px !important;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            text-transform: uppercase;
+            direction: rtl;
+            flex-wrap: wrap;
+            padding: 0;
+            margin-bottom: 30px !important;
+
+            strong {
+                width: 100%;
+                padding: 0;
+                text-align: center;
+                font-size: 185% !important;
+                line-height: 25px;
+            }
+
+            p {
+                margin-top: 5px;
+                font-size: 87.5%;
+                font-weight: 500;
+                margin-right: 0;
+                letter-spacing: 6px;
+                max-height: 73px;
+                color: #E71313;
+
+                border: 0;
+                padding: 0;
+                text-align: center;
+                line-height: 30px;
+                width: 100%;
+            }
+        }
+
+        .category-grid {
+            margin: 0 0 40px 0;
+        }
+
+        .category-grid,
+        .multiple-items {
+
+            .owl-nav {
+                text-align: right;
+
+                button.owl-prev,
+                button.owl-next {
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 40px;
+                    height: 40px;
+                    border: 1px solid #eee;
+                    background-color: #fff;
+                    color: #999;
+                    padding: 0;
+                    margin: 0 10px 0 0;
+                    border-radius: 0
+                }
+
+                button.owl-prev:hover,
+                button.owl-next:hover {
+                    background: #ffffff;
+                    color: unset;
+                }
+            }
+
+            &.owl-carousel {
+
+                .item-row {
+                    margin: 0 5px;
+
+                    .vehicle-item-block {
+                        margin: 0;
+                        padding: 0;
+
+                        .vehicle-item-info {
+                            width: 100% !important;
+                            padding-bottom: 0;
+                            position: relative;
+                            border: 1px solid #eee;
+                            background: #fff;
+                            transition: .3s;
+                            -moz-transition: .3s;
+                            -webkit-transition: .3s;
+                            border-radius: 5px;
+                            overflow: hidden;
+
+                            .image-vehicle {
+                                position: relative;
+                                text-align: center;
+                                padding: 0;
+                                overflow: inherit;
+
+                                .vehicle-image-wrapper {
+                                    padding-bottom: 65%;
+                                    display: block;
+                                    height: 0;
+                                    overflow: hidden;
+                                    position: relative;
+                                    z-index: 1;
+
+                                    .vehicle-image-photo {
+                                        display: block;
+                                        width: 100%;
+                                        left: 0;
+                                        margin: auto;
+                                        position: absolute;
+                                        right: 0;
+                                        top: 0;
+                                        bottom: 0;
+                                    }
+                                }
+                            }
+
+                            .vehicle-item-details {
+                                text-align: center;
+                                padding: 0 15px 15px;
+                            }
+                        }
+                    }
+
+                    .item.product {
+                        &.product-item {
+                            .product-item-info {
+                                text-align: center;
+                                width: unset;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .main-suggestions-block {
+            border-top: 1px solid;
+            border-bottom: 1px solid;
+            border-color: #dfdfdf;
+            margin: 40px 0;
+
+            .wrapper-suggestions-block {
+                display: block;
+                width: 100%;
+                margin: 70px 0;
+
+                .suggestions-block-message {
+                    text-align: center;
+                    span {
+                        margin-top: 5px;
+                        font-size: 87.5%;
+                        font-weight: 500;
+                        margin-right: 0;
+                        letter-spacing: 6px;
+                        color: #E71313;
+                        text-transform: uppercase;
+                    }
+
+                    h2 {
+                        font-size: 185% !important;
+                        font-weight: 600;
+                        text-transform: uppercase;
+                        margin: 0;
+                    }
+                }
+
+                .suggestions-carousel-block {
+                    margin: 30px 0 0 0;
+                    .suggestion-carousel-item {
+                        .suggestion-item-image {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+                            .suggestion-item-photo .suggestion-image-photo {
+                                display: block;
+                                max-height: 99px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
         .category-grid-title {
             margin: 0 0 30px 0;
             text-align: center;
 
             h2 {
+                width: 100%;
+                padding: 0;
                 margin: 0;
+                font-weight: 600;
+                text-align: center;
+                font-size: 185% !important;
+                line-height: 25px;
             }
         }
 
         .category-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 20px;
-            margin: 10px;
 
             .category-element {
-                width: 46%;
+                margin: 5px;
                 text-align: center;
                 background-color: #fff;
 
                 .category-item-img-block {
                     overflow: hidden;
-                    border-radius: 10px;
+                    border-radius: 5px;
                     display: block;
                     background: #fff;
                     border: 1px solid #ddd;
@@ -337,11 +519,99 @@
             }
         }
 
+
+        .section-block-title {
+            padding: 0 85px;
+            flex-wrap: unset;
+
+            strong {
+                font-size: 275% !important;
+                font-weight: 600;
+                line-height: 44px;
+                text-align: left;
+                width: 50%;
+                padding-left: 30px;
+            }
+
+            p {
+                margin-top: 5px;
+                font-size: 87.5%;
+                border-right: 1px solid;
+                font-weight: 500;
+                padding-right: 30px;
+                margin-right: 0;
+                line-height: 80px;
+                width: 50%;
+                letter-spacing: 6px;
+                max-height: 73px;
+                text-align: right;
+            }
+        }
+
+        .multiple-items {
+            &.block-carousel {
+
+                .item-row {
+                    .item.product {
+                        &.product-item {
+                            .product-item-info {
+                                text-align: center;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .main-suggestions-block {
+            border-top: 1px solid;
+            border-bottom: 1px solid;
+            border-color: #dfdfdf;
+            margin: 70px 0;
+
+            .wrapper-suggestions-block {
+                display: flex;
+                width: 100%;
+                margin: 70px 0;
+
+                .suggestions-block-message {
+                    width: 40%;
+
+                    h2 {
+                        font-size: 275% !important;
+                    }
+                }
+
+                .suggestions-carousel-block {
+                    width: 60%;
+                    margin: 0;
+
+                    .suggestion-carousel-item {
+                        .suggestion-item-image {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+                            .suggestion-item-photo .suggestion-image-photo {
+                                display: block;
+                                max-height: 99px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .category-grid-title {
+            h2 {
+                font-size: 275% !important;
+            }
+        }
+
         .category-grid {
-            margin: 20px;
+            //margin: 20px;
 
             .category-element {
-                width: 20%;
                 .category-item-img-block {
                     .category-item-img {
                         padding: 45px;
